pre overflow fixed

--- a/src/code.less
+++ b/src/code.less
@@ -23,7 +23,7 @@ pre {
   font-family: 'Courier', monospace;
   font-style: normal;
   line-height: 1.5em;
-  overflow-x: scroll;
+  overflow-x: hidden;
   border-radius: 3px;
   padding: 10px 15px;
   margin: 0;
